# noteplan-organizer

./: .gitignore  CLAUDE.md  DOLT_REMOTE.md  Justfile  README.md  deral34k4lhnjumccvdlullp9elhjfah  eslint.config.js  index.html  infgctrqhbsu4fo3osskhd3ebdavhfg4  lnqkmhpbepps6ikaksoh91flvrpcvm4c  manifest  package.json  rustfmt.toml  vite.config.ts
.beads/: config.yaml  issues.jsonl  (+1 more)
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  backlog_write.rs  commands.rs  config.rs  dump.rs  export.rs  lib.rs  watcher.rs
src-tauri/src/analyzer/: area_balance.rs  broken_links.rs  category_sprawl.rs  cross_wired_id.rs  depth_inconsistency.rs  duplicates.rs  empty_structure.rs  hub_completeness.rs  id_consistency.rs  missing_hub.rs  mod.rs  naming_inconsistency.rs  orphaned_notes.rs  stale_area.rs  stale_tasks.rs  stray_tagged_tasks.rs  template_placeholders.rs  unfiled.rs
src-tauri/src/mcp/: client.rs  commands.rs  mod.rs  tools.rs
src-tauri/src/models/: backlog.rs  benchmark.rs  block.rs  board.rs  daily.rs  filing.rs  finding.rs  mod.rs  note.rs  report.rs
src-tauri/src/parser/: backlog.rs  block.rs  filing.rs  folder.rs  hierarchy.rs  link.rs  markdown.rs  matcher.rs  mod.rs  period.rs  projects.rs  task.rs
src-tauri/tests/: fixture_vault.rs
src-tauri/tests/fixture-vault/: README.md
src-tauri/tests/fixture-vault/Calendar/: 20240101.md  2026-07.md  2026-Q3.md  2026-W27.md  2026.md  20260701.md  20260702.md  20260704.md
src-tauri/tests/fixture-vault/Notes/2x - Projects [Personal]/: Loose Ideas.md
(+63 files in other folders)
