[package]
name = "noteplan-organizer"
version = "0.1.0"
description = "Read-only analysis tool for NotePlan notes"
authors = ["sloveless"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"
default-run = "noteplan-organizer"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
walkdir = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
notify = "7"
notify-debouncer-mini = "0.5"
