[package]
name = "noteplan-organizer"
version = "0.2.0"
authors = ["sloveless"]
default-run = "noteplan-organizer"
edition = "2021"
license = "MIT"
rust-version = "1.77.2"
description = "Read-only analysis tool for NotePlan notes"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
notify = "7"
notify-debouncer-mini = "0.5"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-log = "2"
tokio = { version = "1", features = ["process", "sync"] }
rmcp = { version = "1.2", features = ["client", "transport-child-process"] }
walkdir = "2"
